<resources>
    <string name="app_name">Pelm</string>
    <string name="weather">Weather</string>
    <string name="photo_gallery">Photo Gallery</string>
    <string name="contact_us">Contact Us</string>

    <string name="temperature_with_unit">%1$s°%2$s</string>
    <string name="feels_like">Feels like:</string>
    <string name="condition">Condition:</string>
    <string name="updated_at">Updated at:</string>
    <string name="error_no_cities">Some error occurred while fetching cities</string>
    <string name="error_fetching_weather">Unable to fetch weather at the moment</string>
    <string name="oops">Oops</string>
    <string name="retry">Retry</string>
    <string name="choose_city">Choose city:</string>
    <string name="error_fetching_photos">Unable to fetch photos</string>
    <string name="error_loading_photo">Something went wrong, while loading the image</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="submit">Submit</string>

    <string name="error_message_unknown">Unknown error occurred</string>
    <string name="error_message_empty_field">Field cannot be empty</string>

    <string name="error_message_empty_name">Please enter name</string>
    <string name="error_message_valid_name">Please enter valid name</string>
    <string name="error_message_name_length">Name must have minimum of 4 characters</string>

    <string name="error_message_empty_email">Please enter email</string>
    <string name="error_message_valid_email">Please enter valid email</string>

    <string name="error_message_empty_phone">Please enter phone</string>
    <string name="error_message_phone_length">Phone must be minimum of length 5 and maximum of 15</string>
    <string name="error_message_valid_phone">Please enter valid phone</string>
    <string name="success_contact_form">Contact form submitted</string>
</resources>