<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_home"
    app:startDestination="@id/weather">

    <fragment
        android:id="@+id/weather"
        android:name="com.vipulasri.pelm.ui.weather.WeatherFragment"
        android:label="@string/weather"
        tools:layout="@layout/fragment_weather" />

    <fragment
        android:id="@+id/photo_gallery"
        android:name="com.vipulasri.pelm.ui.gallery.GalleryFragment"
        android:label="@string/photo_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/contact"
        android:name="com.vipulasri.pelm.ui.contact.ContactFragment"
        android:label="@string/contact_us"
        tools:layout="@layout/fragment_contact" />

</navigation>